--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -31,7 +31,7 @@ const {
 			<aside class="w-64 bg-gray-100 p-4 hidden sm:block shadow-lg"> {/* Sidebar for larger screens */}
 				<SiteNav /> {/* SiteNav in sidebar */}
 			</aside>
-			<main class="flex-grow container mx-auto p-4">
+			<main class="flex-grow p-4">
 				<slot />
 			</main>
 		</div>
