--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,8 +3,10 @@ import MainLayout from '../layouts/MainLayout.astro';
 ---
 
 <MainLayout>
-  <h1 class="text-4xl font-bold mb-4">Yakuza Pank TRPGへようこそ</h1>
-  <p>
-    このサイトは、「Yakuza Pank」テーブルトークRPGの公式ルールブックです。
-  </p>
+  <div class="container mx-auto">
+    <h1 class="text-4xl font-bold mb-4">Yakuza Pank TRPGへようこそ</h1>
+    <p>
+      このサイトは、「Yakuza Pank」テーブルトークRPGの公式ルールブックです。
+    </p>
+  </div>
 </MainLayout>
