--- a/src/pages/rulebook/[...slug].astro
+++ b/src/pages/rulebook/[...slug].astro
@@ -16,14 +16,18 @@ const { Content } = await entry.render();
 ---
 
 <MainLayout title={entry.data.title} description={entry.data.description}>
-  <article class="flex">
-    <div class="flex-grow prose">
-      <Content />
+  <div class="container mx-auto px-4">
+    <div class="lg:grid lg:grid-cols-12 lg:gap-x-8">
+      <article class="prose lg:col-start-2 lg:col-span-8 justify-self-center">
+        <Content />
+      </article>
+      {entry.data.showToc && (
+        <aside class="hidden lg:block lg:col-start-10 lg:col-span-3">
+          <div class="sticky top-20">
+            <TableOfContents client:load />
+          </div>
+        </aside>
+      )}
     </div>
-    {entry.data.showToc && (
-      <aside class="hidden lg:block w-64 ml-8 flex-shrink-0">
-        <TableOfContents client:load />
-      </aside>
-    )}
-  </article>
+  </div>
 </MainLayout>
