--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,6 +9,9 @@ interface Props {
 const { base } = Astro.props;
 ---
 <header id="main-header" class="bg-gray-800 text-white p-4 flex justify-between items-center shadow-md">
-  <a href={`${base}/`} class="text-2xl font-extrabold tracking-tight hover:text-gray-300 transition-colors duration-200">{SITE_CONFIG.title}</a>
+  <a href={`${base}/`} class="text-2xl font-extrabold tracking-tight hover:text-gray-300 transition-colors duration-200 flex items-center">
+    <img src={import.meta.env.BASE_URL + 'icon.svg'} alt="Site Icon" class="h-8 w-8 mr-2" />
+    {SITE_CONFIG.title}
+  </a>
   <MobileNavToggleButton client:load base={base} />
 </header>
